add best model saving

--- a/Master Thesis/diplomski.tex
+++ b/Master Thesis/diplomski.tex
@@ -477,7 +477,15 @@ To generate the dataset, we used a multi-step process. The yeast genome was stor
 
 We found that generating 5000 - 10 000 reads gave satisfactory results in combination with the Raven assembler \cite{Vaser}. This is due to the fact that Raven's \texttt{filter} option reduces the number of edges in the graph if a smaller value for the option is specified. While setting the option to 0.99, and using the previously mentioned number of reads, Raven will generate an appropriate number of nodes and edges for training. Setting it to anything lower would create datasets too small for training. Unfortunately, this very low filter value also meant that the overlaps between our contigs were also a minimum of 99\%, making them less of a candidate for usage as edge features. We won't go into detail about why this is so, as it is unclear to us as well.
 
-After Raven is done with the assembly process, it outputs two files: a GFA file (section \ref{subsubsec:gfa}) and CSV file (section \ref{subsubsec:csv}). They both contain information about the contigs and their overlaps suitable in a format for generating a graph. They also contained different information in each, so to fully utilize all the graph information we have available, we needed to use both files. From the GFA file, we extract information about which contig belongs to the mutated reads and which one to the original simulated ones, as well as contig overlap length information. We extract them to a separate file for easier analyzing. An example of a graph obtained after assembly can be seen in Figure \ref{fig:graph}. Now, as we previously mentioned, our task is to separate the contigs into the father's and the mother's genome. In other words, if we are presented with a graph where nodes represent contigs and edges their overlaps, we need to remove edges between contigs that don't belong to the same parent. So for each edge, we specify if it's "correct" (i.e. it connects two contigs belonging to the same parent) or "incorrect" (it connect two contigs belonging to different parents). We now have a dataset where each edge has a label, as well as a feature in the form of overlap length. We can now use this as input to our model to generate a dataset fit for training.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{images/separated_haplotypes_before_training.png}
+	\caption[Separated graph]{Example of a graph obtained after sequencing and assembly. in this case, the haplotypes are separated. Orange nodes represent mutated reads, while green nodes represent the original reads. This graph was obtained using the Graphia\footnotemark{} graphing tool.}
+	\label{fig:separated graph}
+\end{figure}
+\footnotetext{https://graphia.app/}
+
+After Raven is done with the assembly process, it outputs two files: a GFA file (section \ref{subsubsec:gfa}) and CSV file (section \ref{subsubsec:csv}). They both contain information about the contigs and their overlaps suitable in a format for generating a graph. They also contained different information in each, so to fully utilize all the graph information we have available, we needed to use both files. From the GFA file, we extract information about which contig belongs to the mutated reads and which one to the original simulated ones, as well as contig overlap length information. We extract them to a separate file for easier analyzing. An example of a graph obtained after assembly can be seen in Figure \ref{fig:graph}. Now, as we previously mentioned, our task is to separate the contigs into the father's and the mother's genome. In other words, if we are presented with a graph where nodes represent contigs and edges their overlaps, we need to remove edges between contigs that don't belong to the same parent. So for each edge, we specify if it's "correct" (i.e. it connects two contigs belonging to the same parent) or "incorrect" (it connect two contigs belonging to different parents). We now have a dataset where each edge has a label, as well as a feature in the form of overlap length. The ratio of the non mutated nodes compared to the mutated nodes is on average around 2.5, while the ratio of labels is roughly 40:60, which is fairly balanced and good enough for our task. That being said, after separation, only one of the haplotypes is well defined, with the other one being highly fragmented and incomplete. This can be seen in Figure \ref{fig:separated graph}. We can now use this as input to our model to generate a dataset fit for training.
 
 \chapter{Implementation}
 
