--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -378,3 +378,35 @@
 	title = {A 2021 Guide to improving CNNs-Optimizers: Adam vs SGD},
 	year = {2021}}
 }
+
+@article{rnn_backprop,
+	title = {Generalization of back-propagation to recurrent neural networks},
+	author = {Pineda, Fernando J.},
+	journal = {Phys. Rev. Lett.},
+	volume = {59},
+	issue = {19},
+	pages = {2229--2232},
+	numpages = {0},
+	year = {1987},
+	month = {Nov},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevLett.59.2229},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.59.2229}
+}
+
+@article{baker_2012,
+	title={De Novo Genome Assembly: What every biologist should know}, url={https://www.nature.com/articles/nmeth.1935#citeas},
+	journal={Nature News},
+	publisher={Nature Publishing Group},
+	author={Baker, Monya},
+	year={2012},
+	month={Mar}
+}
+
+@book{compeau_pevzner_2015,
+	place={La Jolla (CA)},
+	title={Bioinformatics algorithms: An active learning approach},
+	publisher={Active Learning Publishers},
+	author={Compeau, Phillip and Pevzner, Pavel},
+	year={2015}
+} 
